<resources>
    <string name="app_name">Template</string>
    <string name="loading">로딩중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>

    <string name="basic_task_time_setting">이용시간 설정하기</string>
    <string name="basic_task_activity_location_service_not_activate">위치서비스 비활성화</string>
    <string name="basic_task_activity_location_service_asking">앱을 사용하기 위해서는 위치 서비스가 필요합니다. 위치설정을 수정하시겠습니까?</string>

    <string name="set_time_borrow_time">대여시각</string>
    <string name="set_time_return_time">반납시각</string>
    <string name="set_time_confirm">확인</string>
    <string name="heool">이용시간 선택하기</string>
    <string name="time_set_period_warning">대여시각은 반납시각이후일 수 없습니다</string>
    <string name="set_time_set_time">시간을 선택하세요</string>
    <string name="time_set_time_set">최소 30분이상부터 대여가능합니다</string>
    <string name="Basic_task_bottom_sheet_insurance_title">차량손해면책 상품 선택</string>
    <string name="Basic_task_bottom_sheet_insurance_description">사고 시, 회원님이 부담할 최대한도 금액 보장 \n상품입니다.</string>
    <string name="bottom_insurance_axa_include"><u>AXA 운전자보험 포함</u></string>
</resources>
