<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/time_set_btn_cancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@android:color/transparent"
            android:src="@drawable/close_window_icon"
            android:scaleType="fitCenter"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/time_set_tv_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="40dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorDarker"
            android:text="@string/basic_task_time_setting"/>

        <TextView
            android:id="@+id/time_set_tv_time_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:textSize="14sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:background="@drawable/stroke_up_back"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_time_borrow_time"
                        android:textSize="17sp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_alignParentStart="true"/>

                    <ImageButton
                        android:id="@+id/time_set_btn_borrow_time"
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:layout_alignParentEnd="true"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/down_side_arrow_icon"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"/>

                    <TextView
                        android:id="@+id/time_set_tv_borrow_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5dp"
                        android:layout_toLeftOf="@+id/time_set_btn_borrow_time"
                        android:textColor="@color/colorDarker"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/set_time_set_time"/>
                </RelativeLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/time_set_borrow_number_picker"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp">

                    <NumberPicker
                        android:id="@+id/time_set_np_borrow_date"
                        android:layout_width="90dp"
                        android:layout_height="140dp"
                        android:theme="@style/AppTheme.PickerDate"
                        android:layout_marginStart="35dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/time_set_np_borrow_hour"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <NumberPicker
                        android:id="@+id/time_set_np_borrow_hour"
                        android:layout_width="70dp"
                        android:layout_height="140dp"
                        android:theme="@style/AppTheme.PickerTime"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/time_set_np_borrow_min"
                        app:layout_constraintStart_toEndOf="@id/time_set_np_borrow_date"
                        app:layout_constraintTop_toTopOf="parent" />

                    <NumberPicker
                        android:id="@+id/time_set_np_borrow_min"
                        android:layout_width="70dp"
                        android:layout_height="140dp"
                        android:theme="@style/AppTheme.PickerTime"
                        android:layout_marginEnd="35dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/time_set_np_borrow_hour"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:background="@drawable/stroke_up_back"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_time_return_time"
                        android:textSize="17sp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_alignParentStart="true"/>

                    <ImageButton
                        android:id="@+id/time_set_btn_return_time"
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:layout_alignParentEnd="true"
                        android:background="@android:color/transparent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/down_side_arrow_icon"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"/>

                    <TextView
                        android:id="@+id/time_set_tv_return_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5dp"
                        android:layout_toLeftOf="@+id/time_set_btn_return_time"
                        android:textColor="@color/colorDarker"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/set_time_set_time"/>
                </RelativeLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/time_set_return_number_picker"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <NumberPicker
                        android:id="@+id/time_set_np_return_date"
                        android:layout_width="90dp"
                        android:layout_height="140dp"
                        android:theme="@style/AppTheme.PickerDate"
                        android:layout_marginStart="35dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/time_set_np_return_hour"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <NumberPicker
                        android:id="@+id/time_set_np_return_hour"
                        android:layout_width="70dp"
                        android:layout_height="140dp"
                        android:theme="@style/AppTheme.PickerTime"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/time_set_np_return_min"
                        app:layout_constraintStart_toEndOf="@id/time_set_np_return_date"
                        app:layout_constraintTop_toTopOf="parent" />

                    <NumberPicker
                        android:id="@+id/time_set_np_return_min"
                        android:layout_width="70dp"
                        android:layout_height="140dp"
                        android:theme="@style/AppTheme.PickerTime"
                        android:layout_marginEnd="35dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/time_set_np_return_hour"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/time_set_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorAccent"
        android:text="@string/set_time_confirm"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>